--- a/HeartRunning/res/layout/running_view.xml
+++ b/HeartRunning/res/layout/running_view.xml
@@ -3,7 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+	<FrameLayout
+	    android:id="@+id/camera_preview"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:layout_weight="1"
+	    />
     <Button
         android:id="@+id/button_finish_run"
         android:layout_width="wrap_content"
