--- a/HeartRunning/res/layout/running_view.xml
+++ b/HeartRunning/res/layout/running_view.xml
@@ -6,13 +6,28 @@
 	<FrameLayout
 	    android:id="@+id/camera_preview"
 	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
+	    android:layout_height="0dp"
 	    android:layout_weight="1"
 	    />
-    <Button
+
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
+
+	       <Button
         android:id="@+id/button_finish_run"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_finish_run" />
+	<TextView
+	    android:id="@+id/hrText"
+	    android:layout_width="0dp"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1"
+	    android:text="Small Text"
+	    android:textAppearance="?android:attr/textAppearanceSmall" />
+	</LinearLayout>
 
+ 
+    
 </LinearLayout>
