--- a/HeartRunning/res/layout/running_view.xml
+++ b/HeartRunning/res/layout/running_view.xml
@@ -8,7 +8,14 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="0dp"
 	    android:layout_weight="1"
-	    />
+	    >
+	</FrameLayout>
+
+	<View
+	    android:id="@+id/heart_rate_graph"
+	    android:layout_width="wrap_content"
+	    android:layout_height="29dp"
+	    android:layout_weight="0.16" />
 
 	<LinearLayout
 	    android:layout_width="match_parent"
