--- a/HeartRunning/res/layout/running_view.xml
+++ b/HeartRunning/res/layout/running_view.xml
@@ -9,13 +9,15 @@
 	    android:layout_height="0dp"
 	    android:layout_weight="1"
 	    >
+
+
+
 	</FrameLayout>
 
-	<View
-	    android:id="@+id/heart_rate_graph"
-	    android:layout_width="wrap_content"
-	    android:layout_height="29dp"
-	    android:layout_weight="0.16" />
+		<com.local.heartrunning.GraphView
+		    android:id="@+id/hear_rate_graph"
+		    android:layout_width="wrap_content"
+		    android:layout_height="72dp" />
 
 	<LinearLayout
 	    android:layout_width="match_parent"
