--- a/HeartRunning/res/layout/running_view.xml
+++ b/HeartRunning/res/layout/running_view.xml
@@ -15,7 +15,7 @@
 	</FrameLayout>
 
 		<com.local.heartrunning.GraphView
-		    android:id="@+id/hear_rate_graph"
+		    android:id="@+id/heart_rate_graph"
 		    android:layout_width="wrap_content"
 		    android:layout_height="72dp" />
 
