--- a/HeartRunning/res/layout/running_view.xml
+++ b/HeartRunning/res/layout/running_view.xml
@@ -33,7 +33,7 @@
 	    android:layout_width="0dp"
 	    android:layout_height="wrap_content"
 	    android:layout_weight="1"
-	    android:text="Small Text"
+	    android:text="@string/bpm_text"
 	    android:textAppearance="?android:attr/textAppearanceSmall" />
 	</LinearLayout>
 
