Get the user name from Facebook, got maps to work

--- a/HeartRunning/res/layout/post_run_view.xml
+++ b/HeartRunning/res/layout/post_run_view.xml
@@ -9,6 +9,6 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:clickable="true"
-	    android:apiKey="Your Maps API Key goes here"
+	    android:apiKey="0tH9CAxxoqA97nrxPL2VXa0p3gMnh3ggFenj-oA"
 	/>
 </RelativeLayout>
