--- a/HeartRunning/res/layout/main_menu.xml
+++ b/HeartRunning/res/layout/main_menu.xml
@@ -4,11 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="34dp"
+        android:text="Let's get Going!" />
+
     <Button
         android:id="@+id/menu_start_running_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
         android:text="@string/start_running" />
 
 </LinearLayout>
