--- a/HeartRunning/res/layout/post_run_view.xml
+++ b/HeartRunning/res/layout/post_run_view.xml
@@ -13,14 +13,32 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="5dp"
         android:layout_alignParentLeft="true"
-        android:prompt="@string/choose_workout"         />
+        android:prompt="@string/choose_workout"  />
+    
+    
+    <TextView
+        android:id="@+id/heartscore_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/workout_spinner"
+        android:text="@string/heartscore_label"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <TextView
+        android:id="@+id/heartscore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/heartscore_label"
+        android:textSize="50sp" />
     
     <TextView
         android:id="@+id/distance_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/workout_spinner"
+        android:layout_below="@+id/heartscore"
         android:text="@string/distance_label"  />
     
     <TextView 
@@ -28,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/distance_label"
-        android:layout_below="@+id/workout_spinner"
+        android:layout_below="@+id/heartscore"
         android:layout_marginLeft="10dp"
         android:layout_alignParentRight="true"  />
     
@@ -83,43 +101,26 @@
         android:layout_marginLeft="10dp"
         android:layout_alignParentRight="true"  />
     
-    <TextView
-        android:id="@+id/target_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/speed_label"
-        android:layout_alignParentLeft="true"
-        android:text="@string/target_label"  />
-    
-    <TextView 
-        android:id="@+id/target"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/speed_label"
-        android:layout_toRightOf="@+id/target_label"
-        android:layout_marginLeft="10dp"
-        android:layout_alignParentRight="true"  />
-    
-
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_height="50dp"
+        android:layout_width="fill_parent"
+        >
 
     <Button
         android:id="@+id/back_run_view"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/target"
-        android:layout_toRightOf="@+id/target_label"
-        android:text="@string/back_button" />
+        android:text="@string/back_button"
+        android:layout_weight="1" />
 
     <Button
         android:id="@+id/goto_map"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/target_label"
-        android:layout_alignParentBottom="true"
-        android:layout_alignTop="@+id/back_run_view"
-        android:layout_toLeftOf="@+id/back_run_view"
-        android:text="@string/goto_map" />
+        android:text="@string/goto_map"
+        android:layout_weight="1" />
 
+    </LinearLayout>
 
 </RelativeLayout>
