--- a/HeartRunning/res/layout/activity_main.xml
+++ b/HeartRunning/res/layout/activity_main.xml
@@ -14,6 +14,15 @@
         tools:context=".MainActivity"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/heart"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/textView1" />
+    
     <Button
         android:id="@+id/login_button"
         android:layout_width="match_parent"
